fix: вносит правки в meta description

--- a/source/pug/components/base/layout.pug
+++ b/source/pug/components/base/layout.pug
@@ -10,7 +10,7 @@ html(lang="ru")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="description", content="Portfolio — сайт с моими работами")
+    meta(name="description", content="Global")
 
     link(rel="preload", href="fonts/Poppins-Regular.woff2", as="font", crossorigin="anonymous")
     link(rel="preload", href="fonts/Poppins-Medium.woff2", as="font", crossorigin="anonymous")
